# LuaTest

./: .gitignore  CMakeLists.txt  LuaWrapper.cpp  LuaWrapper.h  NPCManager.h  NPCReader.cpp  NPCReader.h  main.cpp
luaScripts/: test.lua
